# BBN

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.38426  default_param.ini  plot_spectra.py  script.p  script_IR.p  script_constraints.p  script_noICS.p  script_spectre.p  script_spectre_2.p  test.ini
Beryllium/: Abondance_Anal_theta.C  Abondancev4_Be.C  Abondancev4_Be_Anal.C  a.out
BestConstraints/: Best_Constraints.C
Deuterium/: 30MeV.out  4MeV.out  70MeV.out  Deuterium_Non_Standard_Avec_Production.C  Deuterium_Non_Standard_Sans_Production.C  Deuterium_Non_Standard_Sans_Production.C~  a.out
ExtraProgram/: .fuse_hidden0000000700000001  2H30MeVDestruc.out  CheckInterpolation.C  CheckInterpolation_3He.C  ComparaisonSpectre.C  FitContraintes.C  ScriptComparaisonSpectre.p  ScriptCorrection.p  ScriptFitContraintes.p  ScriptInterpolation.p  a.out
Helium3/: Abondancev5_3He.C~  Helium3_Non_Standard.C  a.out
Helium4/: Helium4_Non_Standard.C  a.out
Include/: Abondancev4.h  Abondancev5_2.h  BBN_constraints.h  EM_cascade.h  common.h  injected_spectrum.h  nrutil.c  nrutil.h  structures.h  test_functions.h  tools.h
Source/: BBN_constraints.cpp  EM_cascade.cpp  Injected_spectrum.cpp  a.out  main.cpp  script_constraints.p  script_spectre.p  script_spectre_2.p  test.cpp  tools.cpp
TableIntegraleSpectre/: ScriptIntegrale.p
cmake/: CheckCPP11Flags.cmake
doc/: CMakeLists.txt  Doxyfile.in  README.md
include/: BBN_constraints.h  CMakeLists.txt  common.h  injected_spectrum.h  structures.h  tools.h
lib/: BBN_constraints.cpp  BBN_constraints.cpp.orig  electrons.cpp  (+11 more)
(+25 files in other folders)
